--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,11 @@ android {
 }
 
 dependencies {
+    compile 'com.github.bumptech.glide:glide:4.7.1'
+//    todo: replace 'compile' with 'implementation' or 'api'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
